[package]
name = "node-runtime"
build = "build.rs"
edition = "2018"
version = "0.1.0"
authors = ["trust dev"]
license = 'Apache-2.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true }
static_assertions = "1.1.0"
funty = "=1.1.0"
hex-literal = { version = "0.3.1", optional = true }

# primitives
sp-authority-discovery = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-consensus-babe = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, version = "3.0.0"}
sp-inherents = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
node-primitives = { default-features = false, path = "../primitives" }
sp-offchain = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-staking = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-keyring = { version = "3.0.0", optional = true, git = "https://github.com/paritytech/substrate" }
sp-session = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-version = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }

# frame dependencies
frame-executive = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-benchmarking = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", optional = true }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system-benchmarking = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", optional = true }
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-assets = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-authority-discovery = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-authorship = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-babe = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-balances = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-bounties = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-collective = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-contracts = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-contracts-primitives = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-contracts-rpc-runtime-api = { version = "0.8.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-democracy = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-elections-phragmen = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-grandpa = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-im-online = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-indices = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-identity = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-lottery = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-membership = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-mmr = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-multisig = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-offences = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-offences-benchmarking = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
pallet-proxy = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-recovery = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-session = { version = "3.0.0", features = ["historical"], git = "https://github.com/paritytech/substrate", default-features = false }
pallet-session-benchmarking = { version = "3.0.0", git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
pallet-staking = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-staking-reward-curve = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-scheduler = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-society = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-sudo = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-tips = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-treasury = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-utility = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-vesting = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }

[build-dependencies]
substrate-wasm-builder = { version = "4.0.0", git = "https://github.com/paritytech/substrate" }

[dev-dependencies]
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }

[features]
default = ["std"]
with-tracing = [ "frame-executive/with-tracing" ]
std = [
	"sp-authority-discovery/std",
	"pallet-assets/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"sp-consensus-babe/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-bounties/std",
	"sp-block-builder/std",
	"codec/std",
	"pallet-collective/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"sp-inherents/std",
	"pallet-lottery/std",
	"pallet-membership/std",
	"pallet-mmr/std",
	"pallet-multisig/std",
	"pallet-identity/std",
	"pallet-scheduler/std",
	"node-primitives/std",
	"sp-offchain/std",
	"pallet-offences/std",
	"pallet-proxy/std",
	"sp-core/std",
	"pallet-randomness-collective-flip/std",
	"sp-std/std",
	"serde",
	"pallet-session/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-staking/std",
	"sp-keyring",
	"sp-session/std",
	"pallet-sudo/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-tips/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"sp-transaction-pool/std",
	"pallet-utility/std",
	"sp-version/std",
	"pallet-society/std",
	"pallet-recovery/std",
	"pallet-vesting/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-lottery/runtime-benchmarks",
	"pallet-mmr/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-society/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-tips/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
	"hex-literal",
]
