[package]
name = "node-testing"
version = "2.0.0"
authors = ["trust dev"]
license = 'Apache-2.0'
edition = "2018"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
pallet-balances = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-service = { version = "0.9.0", features = ["test-helpers", "db"],  git = "https://github.com/paritytech/substrate" }
sc-client-db = { version = "0.9.0", git = "https://github.com/paritytech/substrate", features = ["kvdb-rocksdb", "parity-db"] }
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
codec = { package = "parity-scale-codec", version = "2.0.0" }
pallet-contracts = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
pallet-grandpa = { version = "3.1.0", git = "https://github.com/paritytech/substrate" }
pallet-indices = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-keyring = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
node-executor = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
node-primitives = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
node-runtime = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
frame-support = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
pallet-session = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
pallet-society = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
pallet-staking = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-executor = { version = "0.9.0", git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
frame-system = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
substrate-test-client = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
pallet-treasury = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-timestamp = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-block-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-block-builder = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
log = "0.4.8"
tempfile = "3.1.0"
fs_extra = "1"
futures = "0.3.1"

[dev-dependencies]
criterion = "0.3.0"
sc-cli = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
